#  Copyright (C) 2007-2008  CEA/DEN, EDF R&D, OPEN CASCADE
#
#  Copyright (C) 2003-2007  OPEN CASCADE, EADS/CCR, LIP6, CEA/DEN,
#  CEDRAT, EDF R&D, LEG, PRINCIPIA R&D, BUREAU VERITAS
#
#  This library is free software; you can redistribute it and/or
#  modify it under the terms of the GNU Lesser General Public
#  License as published by the Free Software Foundation; either
#  version 2.1 of the License.
#
#  This library is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#  Lesser General Public License for more details.
#
#  You should have received a copy of the GNU Lesser General Public
#  License along with this library; if not, write to the Free Software
#  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA
#
#  See http://www.salome-platform.org/ or email : webmaster.salome@opencascade.com
#
#  $Header$
#
include $(top_srcdir)/adm_local/unix/make_common_starter.am


dist_salomeres_DATA =   \
	SalomeApp.xml   \
	boxdxyz.png \
	boxdxyz_2.png \
	cas_calcule.png \
	cylinderpointvector.png \
	cylinderpointvector_2.png \
	HOMARD.png \
	HOMARD_2.png \
	hypotheses.png \
	iter0.png \
	iter_calculee.png \
	iter_next.png \
	iter_non_calculee.png \
	med.png \
	mesh_compute.png \
	mesh_tree_mesh.png \
	spherepoint.png \
	spherepoint_2.png \
	texte.png \
	texte_2.png \
	whatis.png \
	zone_icone.png \
	zone_icone_2.png

# VSR: little trick to avoid putting if HOMARDCatalog.xml to the distribution archive
nodist_salomeres_SCRIPTS = HOMARDCatalog.xml
